# matchbox-desktop-2

./: AUTHORS  ChangeLog  Makefile.am  NEWS  README  TODO  configure.ac  git.mk  launcher-util.c  launcher-util.h  main.c  taku-icon-tile.c  taku-icon-tile.h  taku-launcher-tile.c  taku-launcher-tile.h  taku-table.c  taku-table.h  taku-tile.c  taku-tile.h
libtaku/: Makefile.am  launcher-util.c  launcher-util.h  taku-icon-tile.c  taku-launcher-tile.c  taku-launcher-tile.h  taku-menu-desktop.c  taku-menu.h  taku-queue-source.c  taku-queue-source.h  taku-table.c  taku-table.h  taku-tile.c  taku-tile.h  xutil.c  xutil.h
libtaku/inotify/: inotify-kernel.c  inotify-path.c
src/: Makefile.am  desktop.c  desktop.h  main.c  moko-finger-scroll.c  taku-category-bar.c  taku-category-bar.h
