AM_CPPFLAGS = $(GTK_CFLAGS) $(SN_CFLAGS)
AM_CFLAGS = -Wall
LDADD = $(GTK_LIBS) $(SN_LIBS)

noinst_LIBRARIES = libtaku.a
libtaku_a_SOURCES = \
	eggsequence.c eggsequence.h \
	launcher-util.c launcher-util.h \
	taku-icon-tile.c taku-icon-tile.h \
	taku-launcher-tile.c taku-launcher-tile.h \
	taku-table.c taku-table.h \
	taku-tile.c taku-tile.h \
	xutil.c xutil.h
